fixed problem with the responsivity and the alignment in the blogs and now its ready to copypaste

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -33,3 +33,9 @@
   max-height: 50px;
 }
 
+/* BLOG GENERAL */
+
+.blog-container{
+  width: 95%;
+  margin: auto;
+}
